# MyGui

./: AGENTS.md  COMPLETED_TASKS.md  Cargo.toml  GEMINI.md  README.md  TASKS.md  code_review.md  commit_message.txt  package-lock.json
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/MyGui/: all.html  index.html  sidebar-items.js
docs/MyGui/app/: index.html
docs/MyGui/event/: index.html  sidebar-items.js
docs/MyGui/render/: index.html  sidebar-items.js
docs/MyGui/window/: index.html  sidebar-items.js
docs/search.desc/MyGui/: MyGui-desc-0-.js
docs/src/MyGui/: lib.rs.html
examples/: hello_world.rs
src/: app.rs  lib.rs  main.rs
src/app/: app.rs  mod.rs
src/core/: mod.rs  prelude.rs  types.rs
src/core/backend/: config.rs  direct2d_renderer.rs  mod.rs  renderer.rs
src/core/event/: event_handler.rs  event_loop.rs  input_state.rs  key_id.rs  message.rs  mod.rs  modifier_key_handler.rs  render_event_handler.rs  root_event_handler.rs
src/core/platform/: event_loop.rs  mod.rs  win32_window.rs  window_backend.rs  wndproc.rs
src/core/render/: color.rs  (+4 more)
src/event/: event_handler.rs  key_id.rs  mod.rs  render_event_handler.rs  root_event_handler.rs
src/event_handlers/: mod.rs  render_event_handler.rs  root_event_handler.rs
src/render/: component.rs  direct2d_context.rs  drawable.rs  drawing_context.rs  mod.rs  render_context.rs  scene.rs  text.rs
src/window/: builder.rs  config.rs  mod.rs  window.rs  wndproc_utils.rs
src/window_manager/: config.rs  event_handler.rs  mod.rs  window.rs  wndproc_utils.rs
(+101 files in other folders)
