[package]
name = "hello_world_windows"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
windows = { version = "0.62.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct2D", "Win32_Graphics_DirectWrite", "Win32_Graphics_Dxgi_Common", "Win32_System_Com", "Win32_Graphics_Direct2D_Common", "Win32_System_SystemServices"] }
